--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -5,6 +5,8 @@
       <th>Title</th>
       <th>Opinion</th>
       <th colspan="3"></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +18,24 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td>
+          <% if book.favorited_by?(current_user) %>
+           <p>
+             <%= link_to book_favorites_path(book), method: :delete do %>
+             ♥<%= book.favorites.count %>
+             <% end %>
+           </p>
+          <% else %>
+           <p>
+             <%= link_to book_favorites_path(book), method: :post do %>
+             ♡<%= book.favorites.count %>
+             <% end %>
+           </p>
+          <% end %>
+        </td>
+        <td>
+          コメント数：<%= book.book_comments.count %>
+        </td>
       </tr>
     <% end %>
   </tbody>
