--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,14 +2,13 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: @user %>
+      <%= render 'users/info', user: @book.user %>
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @book_new %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
-  		  <% if @user == current_user %>
   		  <tr>
           <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
@@ -18,21 +17,56 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
-        </tr>
-        <% else %>
-        <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td>
+            <% if @book.favorited_by?(current_user) %>
+             <p>
+               <%= link_to book_favorites_path(@book), method: :delete do %>
+               ♥<%= @book.favorites.count %>
+               <% end %>
+             </p>
+            <% else %>
+             <p>
+               <%= link_to book_favorites_path(@book), method: :post do %>
+               ♡<%= @book.favorites.count %>
+               <% end %>
+             </p>
             <% end %>
           </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
+          <td>コメント数：<%= @book.book_comments.count %></td>
+          <% if @book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% end %>
         </tr>
-        <% end %>
       </table>
+      
+      <table class='table'>
+  		 <tr>
+  		    <% @book.book_comments.each do |book_comment| %>
+  		    <td>
+  		      <%= link_to(user_path(book_comment.user)) do %>
+             <%= image_tag book_comment.user.get_profile_image, size:"100x100" %><br>
+             <%= book_comment.user.name %>
+            <% end %>
+  		    </td>
+  		    <td>
+  		      <%= book_comment.comment %>
+  		    </td>
+          <% if book_comment.user == current_user %>
+            <td class="btn btn-danger">
+              <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+            </td>
+          <% end %>
+         <% end %>
+      </tr>
+      </table>
+　　　
+      <%= form_with model:[@book,@book_comment] do |f| %>
+        <%= f.text_area :comment, placeholder: "コメントをここに", size: "80x10" %>
+        <%= f.submit "送信" %>
+      <% end %>
+
+
     </div>
   </div>
 </div>
